[metadata]
license_file = LICENSE

[check-manifest]
ignore =
    tox.ini

[flake8]
exclude =
    tests/*
max-line-length = 100
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.django.settings
python_files = test*.py
python_paths = tests
norecursedirs=authlib build dist docs htmlcov

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError
    def __repr__
    raise NotImplementedError
    raise DeprecationWarning
    deprecate
