[bdist_wheel]
universal = 1

[metadata]
name = Authlib
version = attr: authlib.__version__
author = Hsiaoming Yang
url = https://authlib.org/
author_email = me@lepture.com
license = BSD 3-Clause License
license_file = LICENSE
description = The ultimate Python library in building OAuth and OpenID Connect servers and clients.
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

project_urls =
    Documentation = https://docs.authlib.org/
    Commercial License = https://authlib.org/plans
    Bug Tracker = https://github.com/lepture/authlib/issues
    Source Code = https://github.com/lepture/authlib
    Blog = https://blog.authlib.org/
    Donate = https://lepture.com/donate

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    cryptography>=3.2

[options.packages.find]
include=
    authlib
    authlib.*

[check-manifest]
ignore =
    tox.ini

[flake8]
exclude =
    tests/*
max-line-length = 100
max-complexity = 10

[tool:pytest]
python_files = test*.py
norecursedirs = authlib build dist docs htmlcov
